syntax="proto3";

package grpc.post.v1;

import "common.proto";

message PostDto {
    int64 id = 1;
    string author = 2;
    int64 authorId = 3;
    string imageId = 4;
    string description = 5;
    common.DateDto dateCreated = 6;
    int32 likesCount = 7;
    int32 commentsCount = 8;
    bool liked = 9;
}

message CreatePostRequest {
    int64 userId = 1;
    string username = 2;
    string imageId = 3;
    string description = 4;
}

message GetPostsRequest {
    int64 userId = 1;
}

message GetPostsResponse {
    repeated PostDto posts = 1;
}

message PostCreatedResponse {
    string message = 1;
    int64 postId = 2;
}

message DeletePostRequest {
    int64 userId = 1;
    int64 postId = 2;
}

message SearchByTagRequest {
    string tag = 1;
    int64 userId = 2;
}

message SearchByTagResponse {
    repeated PostDto posts = 1;
}

message GetUserPostsRequest {
    int64 userId = 1;
}

message GetUserPostsResponse {
    repeated PostDto posts = 1;
}

service Post{
    rpc Create(CreatePostRequest) returns (PostCreatedResponse){}
    rpc Delete(DeletePostRequest) returns (common.EmptyResponse){}
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse){}
    rpc SearchByTag(SearchByTagRequest) returns (SearchByTagResponse){}
    rpc GetUserPosts(GetUserPostsRequest) returns (GetUserPostsResponse){}
}